Light editing of Section 4

--- a/SphericalHarmonicsPaper/NIMA/30-SphericalHarmonics.tex
+++ b/SphericalHarmonicsPaper/NIMA/30-SphericalHarmonics.tex
@@ -6,7 +6,8 @@ We show that spherical harmonics decomposition of the PE hits on the detector su
 we focus on the differences between two-electron (0\nbb-decay events) and single-electron (\B~events) topologies. More complicated 
 event topologies such as \C~background events are also differ from two-electron signal topology. However, as explained further in 
 Sec.~\ref{subsec:c10_spherical_harmonics}, the 0\nbb/\C~separation power strongly depends on the assumptions that are built into the 
-simulation. Therefore we use only 0\nbb/\B~separation as a benchmark test for the spherical harmonics analysis performance.
+simulation. Therefore we use only 0\nbb/\B~separation as a benchmark test for the spherical harmonics analysis performance. We still 
+show 0\nbb/\C~separation for completness.
 
 
 \subsection{Topology of 0\nbb-decay and \B~Events}
